# tlc-recommendation-frontend

./: .env.local  .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  .pylintrc  .replit  DEPLOYMENT.md  README.md  api_client_config.json  api_client_generator.sh  build_replit.sh  lint.sh  main.py  minimal_app.py  netlify.toml  openapi.json  openapi_spec_generator.py  pyproject.toml  railway.json  replit.nix  requirements-minimal.txt  requirements.txt  run.py  serve_frontend.py  simple_app.py  start.py  test.sh  test_app.py
app/: asgi.py
app/api/controllers/: routes.py
app/api/custom_logging/: log_json_formatter.py  logging_setup.py
app/api/schemas/: output.py  recommendations.py  summarization.py
app/core/: event_handlers.py
app/core/services/: recommendation.py  summarization.py  websearch.py
app/settings/: settings.py
experimentation/: Gemini_recommendations___2025.ipynb
present-ponder/: .gitignore  .netlifyignore  README.md  index.html  netlify.toml  package-lock.json  package.json
present-ponder/src/: App.tsx  index.css
present-ponder/src/components/: AuthForm.tsx  GuestMode.tsx  OccasionForm.tsx  ProfileForm.tsx  ProfileList.tsx  ProfileNotes.tsx  QuickRecommendation.tsx  RecommendationCard.tsx  RecommendationsList.tsx
present-ponder/src/hooks/: useAuth.tsx
present-ponder/src/lib/: database.ts  guestDataManager.ts
present-ponder/src/pages/: AuthCallback.tsx  Index.tsx
present-ponder/supabase/: config.toml
present-ponder/supabase/.temp/: pooler-url  project-ref
present-ponder/supabase/migrations/: 20250130000000_add_gift_tables.sql  (+1 more)
tests/: postman_test_payloads.json  quick_test.json  test_prompt_output.py  test_sample.py  test_websearch.py
(+13 files in other folders)
