[tool.poetry]
name = "tlc-ml-service"
version = "0.1.0"
description = ""
authors = ["Rukayat Sadiq <fruqoyya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
