[tool.poetry]
name = "tlc-ml-service"
version = "0.1.0"
description = ""
authors = ["Rukayat Sadiq <fruqoyya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.3.4"
fastapi = "^0.115.8"
starlette = "^0.45.3"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.1"
orjson = "^3.10.15"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
