[tool.poetry]
name = "tlc-ml-service"
version = "0.1.0"
description = ""
authors = ["Rukayat Sadiq <fruqoyya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pylint = "^3.3.4"
fastapi = "^0.115.8"
starlette = "^0.45.3"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.1"
orjson = "^3.10.15"
anthropic = "^0.50.0"
openai = "^1.77.0"
google-generativeai = "^0.8.5"
httpx = "^0.28.1"
pandas = "^2.2.3"
jinja2 = "^3.1.0"
exa-py = "^1.0.0"
aiohttp = "^3.10.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
